--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,12 +26,12 @@ jobs:
         with:
           github_token: ${{ secrets.CSN_TOKEN }}
           publish_dir: .
-##
-# dast:
-#   runs-on: ubuntu-latest
-#   needs: deploy
-#   steps:
-#     - name: OWASP ZAP DAST Scan
-#       continue-on-error: true
-#        run: |
-#          docker run --rm -v $(pwd):/zap/wrk:rw zaproxy/zap-stable zap-baseline.py -t 'https://github.com/ucheenyi/csn-dast-uc' || true
+
+  dast:
+    runs-on: ubuntu-latest
+    needs: deploy
+    steps:
+      - name: OWASP ZAP DAST Scan
+        continue-on-error: true
+        run: |
+          docker run --rm -v $(pwd):/zap/wrk:rw zaproxy/zap-stable zap-baseline.py -t 'https://ucheenyi.github.io/csn-dast-uc' || true
